--- a/app/views/Templates/su/pbko.scala.html
+++ b/app/views/Templates/su/pbko.scala.html
@@ -1,56 +1,38 @@
 @(extracontent:Html=Html(" "),defaultsize:Int =3)
 
-<div class="col-lg-@defaultsize col-md-@defaultsize col-sm-12 col-xs-12">
- <div class="product-wrap thumb">
-	<!-- Begin .featured-product  -->
-	<div class="featured-product">
-	   <!-- Begin .info-wrap -->
-	   <div class="dropdown"  data-bind="css:lovetext()=='Love'?'info-wrap':'info-wrap deactivated'">
-		  <a href="javascript:void(0);" data-bind="click: $parent.lovestate" class="whitelink"><i  data-bind="css:lovetext()=='Love'?'icon-heart':'icon-thumbs-down'"></i><span  data-bind="text: lovetext()=='Love'?'Like It!':lovetext()"></span></a><a href="javascript:void(0);" data-toggle="dropdown" role="button"><b class="caret"></b></a>
-		  <ul role="menu" class="dropdown-menu">
-            <li><a href="javascript:void(0);" data-bind="click: $parent.wantstate, clickBubble: false,text: wanttext,css:wanttext()=='Want'?'':'tred'">Want</a></li>
-            <li><a href="javascript:void(0);" data-bind="click: $parent.triedstate, clickBubble: false,text: triedtext(),css:triedtext()=='Tried'?'':'tred'">Own</a></li>
-            <li><a href="javascript:void(0);" data-bind="click: $parent.collectstate, clickBubble: false">Collect</a></li>
-          </ul>
-	   </div>
-	   <a  data-bind="attr:{href:prlink}" class="btn btn-default view-product">View Product</a>
-	   <!-- End .info-wrap -->
-	   <img data-bind="attr:{src:pic,alt:name}" class="img-responsive">
-	</div>
-	<div class="pull-left productmetadata productcomlike">
-		@*
-		<a data-bind="attr:{href:usrlink,title:discoverer}" class="user-thumb pull-right">
-			<img data-bind="attr:{alt:discoverer,src:usrpic}" class="img-responsive">
-		</a>
-		*@
-		<h4 class="ellipsis"><a data-bind="attr:{href:prlink},text:name"></a></h4>
-		@* 
-		<div class="clearfix"></div>
-		<span data-bind="html:cncy()+$().cat(Math.round(cost()),8)"></span>
-		<ul class="list-inline pull-right">
-		   <li><i class="icon-comment"></i><i data-bind="text: love"></i></li>
-		   <li><i class="icon-heart"></i><i data-bind="text: comment"></i></li>
-		</ul>
-		*@
-	</div>
-	
-	<div class="ellipsis pull-left productmetadata userstoreinfo">
-		<div class="pull-right"><span data-bind="html:cncy()+$().cat(Math.round(cost()),8)"></span></div>
-		<ul class="list-unstyled width-70per">
-		   <li class="ellipsis"> 
-		   		<a class="user-thumb" data-bind="attr:{href:usrlink,title:discoverer}">
-					<img class="inlineimage" data-bind="attr:{alt:discoverer,src:usrpic}">
-					<span data-bind="text:discoverer"></span>
-				</a>
-		   </li>
-		   <li class="padding-small"><a data-bind="attr:{href:storeaddr},text:store"></a></li>
-		</ul>
-	</div>
-	
-	<div class="clearfix"></div>
- </div>
- <!-- End .featured-product -->
-</div>
+<div class="isotope-item">
+  <div class="product-wrap-custom product-details-custom">
+    <!-- Begin .featured-product --> 
+    <div class="featured-product-custom">
+      <div class="shareprod-custom">
+        <a class="share_prod" data-bind="popover: {template: 'popoverBindingTemplate'}"><i class="icon-share"></i></a>
+      </div>
+      
+      <div class="cart-shopping">
+        <a href="javascript:void(0);" data-bind="attr:{href:siteurl}"><i class="icon-shopping-cart icon-shopping-cart-custom"></i></a>
+      </div>
+      <!-- Begin .info-wrap -->
+      <div class="info-wrap-custom">
+        <a href="javascript:void(0);" data-bind="click: $parent.lovestate"><i data-bind="css:lovetext()=='Love'?'icon-heart':'icon-thumbs-down'"></i><span data-bind="text: lovetext()=='Love'?'Like It!':lovetext()"></span></a>
+      </div>
+      <a data-bind="attr:{href:prlink}" class="btn btn-default view-product-custom">View Product</a>
+      <!-- End .info-wrap -->
+      <div class="product-image" data-bind="style: { backgroundImage: 'url(\'' + pic() + '\')'}"></div>
+      
+      <div class="desc_prod_custom">
+        <a data-bind="attr:{href:prlink},text:name"></a>
+        <br>
+        <p>added by <a data-bind="attr:{href:usrlink,title:discoverer}"><span data-bind="text:discoverer"></span></a>  at <span class="price-background" data-bind="html:cncy()+$().cat(Math.round(cost()),8)"></span></p>
+        <ul class="comments-custom">
+          <li><i class="icon-comment"></i>3</li>
+          <li><i class="icon-heart"></i>14</li>
+        </ul>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+  </div>
+  <!-- End .featured-product -->
+</div> 
 
 @*
 <li class="thumbsli">
@@ -93,4 +75,3 @@
     </span>
 </li>
 *@
-   
