--- a/app/views/feed.scala.html
+++ b/app/views/feed.scala.html
@@ -237,6 +237,8 @@
 	<script>
 		function PBDocInit()
 		{
+			var $containerList;
+			
 			function fms(ifs)
 			{
 				var self=this;
@@ -260,17 +262,33 @@
 					var posting = $.post( "@routes.Useract.MyWatchListJson",jsonstring,"json");
 					posting.done(function( data ) {								
 						$prodselect=data['prodgrid'];
-						if(!data['hasmore'])
-							self.fr.page=-1;
 						
-						$.each($prodselect, 
-							function(prindex, prattr)
-							{
-								self.prodList.push(ko.mapping.fromJS(prattr));
-								ldiv.stillbusy();
-							}
-						);
+						var sizeOfItemsBeforeApplyingIsotope = $('.isotope-item').length;
+						$.each($prodselect, function(prindex, prattr){
+							self.prodList.push(ko.mapping.fromJS(prattr));
+							ldiv.stillbusy();
+						});
 						ldiv.loadcomplete();
+						
+						/* Fire event to show isotope view */
+						if(self.fr.page == 1 ){
+							$containerList = $('.isotope-wrap').isotope({
+								  itemSelector: '.isotope-item',
+								  masonry: {
+							   		columnWidth: 10,
+							        gutterWidth: 10
+							  	  }
+							});
+						} else {
+							$.each($('.isotope-item'), function(index, elem) {
+								if (index >= sizeOfItemsBeforeApplyingIsotope) {
+									$containerList.isotope( 'appended', elem );
+								}
+							});	
+						}
+						
+						if(!data['hasmore']) {self.fr.page=-1;}
+						
 					});
 					posting.fail(function( data ) {
 						ldiv.loadcomplete();	
