--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -55,6 +55,7 @@ function PBDocInit(ldiv)
 		
 		@Html(play.Routes.javascriptRouter("shoppageloader",controllers.routes.javascript.Useract.SaveMySearch,controllers.routes.javascript.Useract.FindthisSearch,controllers.routes.javascript.Application.SearchTotalProductCount));
 		
+		var $container;
 		self.loadProd = function(jsonstring) {			
 			ldiv.display();
 			var sentsuccess=true;
@@ -62,9 +63,29 @@ function PBDocInit(ldiv)
 			
 			posting.done(function( data ) {								
 				$prodselect=data['prodgrid'];
-				if(!data['hasmore']){self.fr.page=-1;}				
+				
+				var sizeOfItemsBeforeApplyingIsotope = $('.isotope-item').length;
 				$.each($prodselect,function(prindex, prattr){self.prodList.push(ko.mapping.fromJS(prattr));ldiv.stillbusy();});
 				ldiv.loadcomplete();
+				
+				/* Fire event to show isotope view */
+				if(self.fr.page == 1 ){
+					$container = $('.isotope-wrap').isotope({
+						  itemSelector: '.isotope-item',
+						  masonry: {
+					   		columnWidth: 10,
+					        gutterWidth: 10
+					  	  }
+					});
+				} else {
+					$.each($('.isotope-item'), function(index, elem) {
+						if (index >= sizeOfItemsBeforeApplyingIsotope) {
+							$container.isotope( 'appended', elem );
+						}
+					});	
+				}
+				
+				if(!data['hasmore']){self.fr.page=-1;}		
 			});
 			posting.fail(function( data ) {
 				ldiv.loadcomplete();	
