--- a/app/views/Templates/pageheader.scala.html
+++ b/app/views/Templates/pageheader.scala.html
@@ -6,7 +6,7 @@
 
 
 
-<nav class="navbar navbar-default navbar-fixed-top cbp-af-header " role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top cbp-af-header " role="navigation" style="z-index: 100000;">
 <div class="cbp-af-inner">
 <div class="container">
 
@@ -46,18 +46,18 @@
 			}
 			<li class="menu"><a href="@routes.Application.cshop("Wine")">Wine</a>
 				<ul class="submenu" style="display: none;">
-					<li><a href="@routes.Application.cshop("Merlot")">Merlot</a></li>
-					<li><a href="@routes.Application.cshop("Shiraz")">Shiraz</a></li>
-					<li><a href="@routes.Application.cshop("Grenache")">Grenache</a></li>
+					<li><a href="@routes.Application.cshop("California")">California</a></li>
+					<li><a href="@routes.Application.cshop("French")">French</a></li>
+					<li><a href="@routes.Application.cshop("Italian")">Italian</a></li>
 					<li><a href="@routes.Application.cshop("Pinot Noir")">Pinot Noir</a></li>
 				</ul>
 			</li>
 			<li class="menu"><a href="@routes.Application.cshop("Beer")">Beer</a>
 				<ul class="submenu" style="display: none;">
-					<li><a href="@routes.Application.cshop("Blonde")">Blonde</a></li>
-					<li><a href="@routes.Application.cshop("Brown")">Brown</a></li>
-					<li><a href="@routes.Application.cshop("Cream")">Cream</a></li>
-					<li><a href="@routes.Application.cshop("Dark")">Dark</a></li>
+					<li><a href="@routes.Application.cshop("IPA")">IPA</a></li>
+					<li><a href="@routes.Application.cshop("Pale Ale")">Pale Ale</a></li>
+					<li><a href="@routes.Application.cshop("Amber")">Amber</a></li>
+					<li><a href="@routes.Application.cshop("Lager")">Lager</a></li>
 				</ul>
 			</li>
 			<li class="menu"><a href="@routes.Application.cshop("Spirits")">Spirits</a>
