--- a/app/views/Templates/su/panepbko.scala.html
+++ b/app/views/Templates/su/panepbko.scala.html
@@ -3,7 +3,7 @@
 @import be.objectify.deadbolt.core.utils.TemplateUtils._
 <div>
 	<div class="row ">
-		<div id="iso-container" class="col-lg-12">
+		<div id="iso-container" class="col-lg-12" style="padding-left: 9%;">
     		<div class="isotope-wrap" data-bind="foreach: prodList, visible: prodList().length > 0">	
 				  <!--  product include -->	
 				@Templates.su.pbko(extracontent,defaultsize)    		
