--- a/app/views/shop.scala.html
+++ b/app/views/shop.scala.html
@@ -115,10 +115,10 @@ width:70px;height:70px;vertical-align: baseline!important;
                         <!-- Begin .category-list -->
                         <div class="category-list">
                            <ul>
-                              <li><a href="/discover?q=Wine">Wine</a></li>
-                              <li><a href="/discover?q=Wine Second">Wine Second</a></li>
-                              <li><a href="/discover?q=Wine New">Wine New</a></li>
-                              <li><a href="/discover?q=Old wine">Old wine</a></li>
+                              <li><a href="/discover?q=California">California</a></li>
+                              <li><a href="/discover?q=French">French</a></li>
+                              <li><a href="/discover?q=Italian">Italian</a></li>
+                              <li><a href="/discover?q=Pinot Noir">Pinot Noir</a></li>
                               <li class="more"><a href="/discover?c=Wine">More...</a></li>
                            </ul>
                         </div>
@@ -137,10 +137,10 @@ width:70px;height:70px;vertical-align: baseline!important;
                         <!-- Begin .category-list -->
                         <div class="category-list">
                            <ul>
-                              <li><a href="/discover?q=Wine">Wine</a></li>
-                              <li><a href="/discover?q=Wine Second">Wine Second</a></li>
-                              <li><a href="/discover?q=Wine New">Wine New</a></li>
-                              <li><a href="/discover?q=Old wine">Old wine</a></li>
+                              <li><a href="/discover?q=IPA">IPA</a></li>
+                              <li><a href="/discover?q=Pale Ale">Pale Ale</a></li>
+                              <li><a href="/discover?q=Amber">Amber</a></li>
+                              <li><a href="/discover?q=Lager">Lager</a></li>
                               <li class="more"><a href="/discover?c=Beer">More...</a></li>
                            </ul>
                         </div>
@@ -161,10 +161,10 @@ width:70px;height:70px;vertical-align: baseline!important;
                         <!-- Begin .category-list -->
                         <div class="category-list">
                            <ul>
-                              <li><a href="/discover?q=Wine">Wine</a></li>
-                              <li><a href="/discover?q=Wine Second">Wine Second</a></li>
-                              <li><a href="/discover?q=Wine New">Wine New</a></li>
-                              <li><a href="/discover?q=Old wine">Old wine</a></li>
+                              <li><a href="/discover?q=Rum">Rum</a></li>
+                              <li><a href="/discover?q=Vodka">Vodka</a></li>
+                              <li><a href="/discover?q=Tequila">Tequila</a></li>
+                              <li><a href="/discover?q=Whiskey">Whiskey</a></li>
                               <li class="more"><a href="/discover?c=Spirits">More...</a></li>
                            </ul>
                         </div>
@@ -184,10 +184,10 @@ width:70px;height:70px;vertical-align: baseline!important;
                         <!-- Begin .category-list -->
                         <div class="category-list">
                            <ul>
-                              <li><a href="/discover?q=Wine">Wine</a></li>
-                              <li><a href="/discover?q=Wine Second">Wine Second</a></li>
-                              <li><a href="/discover?q=Wine New">Wine New</a></li>
-                              <li><a href="/discover?q=Old wine">Old wine</a></li>
+                              <li><a href="/discover?q=Latest Trends">Latest Trends</a></li>
+                              <li><a href="/discover?q=Classics">Classics</a></li>
+                              <li><a href="/discover?q=Bar Tools">Bar Tools</a></li>
+                              <li><a href="/discover?q=Recipes">Recipes</a></li>
                               <li class="more"><a href="/discover?c=Mixology">More...</a></li>
                            </ul>
                         </div>
@@ -209,11 +209,11 @@ width:70px;height:70px;vertical-align: baseline!important;
                         <!-- Begin .category-list -->
                         <div class="category-list">
                            <ul>
-                              <li><a href="/discover?q=Wine">Wine</a></li>
-                              <li><a href="/discover?q=Wine Second">Wine Second</a></li>
-                              <li><a href="/discover?q=Wine New">Wine New</a></li>
-                              <li><a href="/discover?q=Old wine">Old wine</a></li>
-                              <li class="more"><a href="/discover?c=Mixology">More...</a></li>
+                              <li><a href="/discover?q=Small Appliances">Small Appliances</a></li>
+                              <li><a href="/discover?q=Cutlery">Cutlery</a></li>
+                              <li><a href="/discover?q=Storage">Storage</a></li>
+                              <li><a href="/discover?q=On the go">On the go</a></li>
+                              <li class="more"><a href="/discover?c=Gadgets">More...</a></li>
                            </ul>
                         </div>
                         <!-- End .category-list -->
@@ -234,10 +234,10 @@ width:70px;height:70px;vertical-align: baseline!important;
                         <!-- Begin .category-list -->
                         <div class="category-list">
                            <ul>
-                              <li><a href="/discover?q=Wine">Wine</a></li>
-                              <li><a href="/discover?q=Wine Second">Wine Second</a></li>
-                              <li><a href="/discover?q=Wine New">Wine New</a></li>
-                              <li><a href="/discover?q=Old wine">Old wine</a></li>
+                              <li><a href="/discover?q=Bar sets">Bar sets</a></li>
+                              <li><a href="/discover?q=Corkscrews">Corkscrews</a></li>
+                              <li><a href="/discover?q=Ice Molds">Ice Molds</a></li>
+                              <li><a href="/discover?q=Shakers">Shakers</a></li>
                               <li class="more"><a href="/discover?c=Toys %26 Trinkets">More...</a></li>
                            </ul>
                         </div>
@@ -257,10 +257,10 @@ width:70px;height:70px;vertical-align: baseline!important;
                         <!-- Begin .category-list -->
                         <div class="category-list">
                            <ul>
-                              <li><a href="/discover?q=Wine">Wine</a></li>
-                              <li><a href="/discover?q=Wine Second">Wine Second</a></li>
-                              <li><a href="/discover?q=Wine New">Wine New</a></li>
-                              <li><a href="/discover?q=Old wine">Old wine</a></li>
+                              <li><a href="/discover?q=Tumblers">Tumblers</a></li>
+                              <li><a href="/discover?q=Wine Glasses">Wine Glasses</a></li>
+                              <li><a href="/discover?q=Drinkware">Drinkware</a></li>
+                              <li><a href="/discover?q=Shot Glasses">Shot Glasses</a></li>
                               <li class="more"><a href="/discover?c=Glassware">More...</a></li>
                            </ul>
                         </div>
@@ -283,7 +283,7 @@ width:70px;height:70px;vertical-align: baseline!important;
          <div class="container">
             <div class="row">
                <div class="col-lg-12 col-12 col-md-12 col-sm-12 col-xs-12 col-12">
-                  <h2>Categories!</h2>
+                  <h2>Categories</h2>
                   <button type="button" class="navbar-toggle category-btn" data-toggle="collapse" data-target=".category-collapse">
                   <span class="sr-only">Toggle navigation</span>
                   <span class="icon-bar"></span>
