--- a/app/views/spages/Aboutus.scala.html
+++ b/app/views/spages/Aboutus.scala.html
@@ -80,11 +80,11 @@
       <!-- Begin .category-list -->
       <div class="category-list">
         <ul>
-          <li><a href="#">Wine</a></li>
-          <li><a href="#">Wine Second</a></li>
-          <li><a href="#">Wine New</a></li>
-          <li><a href="#">Old wine</a></li>
-          <li class="more"><a href="#">More...</a></li>
+          <li><a href="/discover?q=California">California</a></li>
+          <li><a href="/discover?q=French">French</a></li>
+          <li><a href="/discover?q=Italian">Italian</a></li>
+          <li><a href="/discover?q=Pinot Noir">Pinot Noir</a></li>
+          <li class="more"><a href="/discover?c=Wine">More...</a></li>
         </ul>
       </div>
       <!-- End .category-list -->
@@ -102,11 +102,11 @@
       <!-- Begin .category-list -->
       <div class="category-list">
         <ul>
-          <li><a href="#">Wine</a></li>
-          <li><a href="#">Wine Second</a></li>
-          <li><a href="#">Wine New</a></li>
-          <li><a href="#">Old wine</a></li>
-          <li class="more"><a href="#">More...</a></li>
+          <li><a href="/discover?q=IPA">IPA</a></li>
+	      <li><a href="/discover?q=Pale Ale">Pale Ale</a></li>
+	      <li><a href="/discover?q=Amber">Amber</a></li>
+	      <li><a href="/discover?q=Lager">Lager</a></li>
+	      <li class="more"><a href="/discover?c=Beer">More...</a></li>
         </ul>
       </div>
       <!-- End .category-list -->
@@ -125,11 +125,11 @@
       <!-- Begin .category-list -->
       <div class="category-list">
         <ul>
-          <li><a href="#">Wine</a></li>
-          <li><a href="#">Wine Second</a></li>
-          <li><a href="#">Wine New</a></li>
-          <li><a href="#">Old wine</a></li>
-          <li class="more"><a href="#">More...</a></li>
+          <li><a href="/discover?q=Rum">Rum</a></li>
+          <li><a href="/discover?q=Vodka">Vodka</a></li>
+          <li><a href="/discover?q=Tequila">Tequila</a></li>
+          <li><a href="/discover?q=Whiskey">Whiskey</a></li>
+          <li class="more"><a href="/discover?c=Spirits">More...</a></li>
         </ul>
       </div>
       <!-- End .category-list -->
@@ -148,11 +148,11 @@
       <!-- Begin .category-list -->
       <div class="category-list">
         <ul>
-          <li><a href="#">Wine</a></li>
-          <li><a href="#">Wine Second</a></li>
-          <li><a href="#">Wine New</a></li>
-          <li><a href="#">Old wine</a></li>
-          <li class="more"><a href="#">More...</a></li>
+          <li><a href="/discover?q=Latest Trends">Latest Trends</a></li>
+          <li><a href="/discover?q=Classics">Classics</a></li>
+          <li><a href="/discover?q=Bar Tools">Bar Tools</a></li>
+          <li><a href="/discover?q=Recipes">Recipes</a></li>
+          <li class="more"><a href="/discover?c=Mixology">More...</a></li>
         </ul>
       </div>
       <!-- End .category-list -->
@@ -171,11 +171,11 @@
       <!-- Begin .category-list -->
       <div class="category-list">
         <ul>
-          <li><a href="#">Wine</a></li>
-          <li><a href="#">Wine Second</a></li>
-          <li><a href="#">Wine New</a></li>
-          <li><a href="#">Old wine</a></li>
-          <li class="more"><a href="#">More...</a></li>
+          <li><a href="/discover?q=Small Appliances">Small Appliances</a></li>
+          <li><a href="/discover?q=Cutlery">Cutlery</a></li>
+          <li><a href="/discover?q=Storage">Storage</a></li>
+          <li><a href="/discover?q=On the go">On the go</a></li>
+          <li class="more"><a href="/discover?c=Gadgets">More...</a></li>
         </ul>
       </div>
       <!-- End .category-list -->
@@ -194,11 +194,11 @@
       <!-- Begin .category-list -->
       <div class="category-list">
         <ul>
-          <li><a href="#">Wine</a></li>
-          <li><a href="#">Wine Second</a></li>
-          <li><a href="#">Wine New</a></li>
-          <li><a href="#">Old wine</a></li>
-          <li class="more"><a href="#">More...</a></li>
+          <li><a href="/discover?q=Bar sets">Bar sets</a></li>
+          <li><a href="/discover?q=Corkscrews">Corkscrews</a></li>
+          <li><a href="/discover?q=Ice Molds">Ice Molds</a></li>
+          <li><a href="/discover?q=Shakers">Shakers</a></li>
+          <li class="more"><a href="/discover?c=Toys %26 Trinkets">More...</a></li>
         </ul>
       </div>
       <!-- End .category-list -->
@@ -217,11 +217,11 @@
       <!-- Begin .category-list -->
       <div class="category-list">
         <ul>
-          <li><a href="#">Wine</a></li>
-          <li><a href="#">Wine Second</a></li>
-          <li><a href="#">Wine New</a></li>
-          <li><a href="#">Old wine</a></li>
-          <li class="more"><a href="#">More...</a></li>
+          <li><a href="/discover?q=Tumblers">Tumblers</a></li>
+          <li><a href="/discover?q=Wine Glasses">Wine Glasses</a></li>
+          <li><a href="/discover?q=Drinkware">Drinkware</a></li>
+          <li><a href="/discover?q=Shot Glasses">Shot Glasses</a></li>
+          <li class="more"><a href="/discover?c=Glassware">More...</a></li>
         </ul>
       </div>
       <!-- End .category-list -->
